--- a/example-smart-app/launch.html
+++ b/example-smart-app/launch.html
@@ -28,7 +28,7 @@
     <script>
       FHIR.oauth2.authorize({
         'client_id': '8324e56a-73bf-4dbb-9694-df71f6bcb3ac',
-        'scope':  'patient/Patient.read patient/Observation.read launch online_access openid profile'
+        'scope':  'patient/Patient.read patient/Observation.read patient/AllergyIntolerance.read launch online_access openid profile'
       });
     </script>
     <div class="spinner">
