--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -41,6 +41,13 @@
           <td id='birthdate'></td>
         </tr>
       </table>
+      <h2>Allergy Intolerance</h2>
+      <table>
+        <tr>
+            <th>Type:</th>
+          <td id='type'></td>
+        </tr> 
+      </table>
       <h2>Observation Resource</h2>
       <table>
         <tr>
