--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -44,7 +44,7 @@
       <h2>Allergy Intolerance</h2>
       <table>
         <tr>
-            <th>Type:</th>
+            <th>Allergies:</th>
           <td id='type'></td>
         </tr> 
       </table>
