--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -42,7 +42,12 @@
         </tr>
       </table>
       <h2>Allergy Intolerance</h2>
-      
+      <table>
+        <tr>
+          <th>Type:</th>
+          <td id='type'></td>
+        </tr>
+      </table>  
       <h2>Observation Resource</h2>
       <table>
         <tr>
